[gd_scene load_steps=16 format=3 uid="uid://cirfrcg3iv6bo"]

[ext_resource type="Script" path="res://level/level.gd" id="1_5ow2e"]
[ext_resource type="Texture2D" uid="uid://bklylkidr6em2" path="res://level/background.png" id="1_66n7g"]
[ext_resource type="Texture2D" uid="uid://c7o5ap7gp8aqy" path="res://ground/ground.png" id="3_akm70"]
[ext_resource type="PackedScene" uid="uid://dg5bt6iy7pee3" path="res://player/player.tscn" id="3_enfji"]
[ext_resource type="PackedScene" uid="uid://dxbwgo2331w4i" path="res://pipe/pipe.tscn" id="4_ettgd"]
[ext_resource type="PackedScene" uid="uid://d0y487jhnugs7" path="res://HUD/GameOverHUD/game_over_hud.tscn" id="6_jl6tk"]
[ext_resource type="AudioStream" uid="uid://6lvvrcsvtshm" path="res://assets/sounds/game-over.wav" id="7_amvyr"]
[ext_resource type="PackedScene" uid="uid://cj5q43l0m72dk" path="res://HUD/MainGameHUD/main_game_hud.tscn" id="7_sttb2"]
[ext_resource type="AudioStream" uid="uid://b1nbj5dqgap6f" path="res://assets/sounds/coin.wav" id="8_njxtp"]
[ext_resource type="PackedScene" uid="uid://oys4oirqnln7" path="res://HUD/TitleScreen/title_screen_hud.tscn" id="9_c6wvd"]
[ext_resource type="PackedScene" uid="uid://t6qp3ndlybqc" path="res://HUD/StartGameHUD/start_game_hud.tscn" id="10_7fif3"]
[ext_resource type="AudioStream" uid="uid://brwkv81mvpslo" path="res://assets/sounds/woosh.wav" id="12_lfeax"]

[sub_resource type="GDScript" id="GDScript_mc0ia"]
script/source = "extends StaticBody2D

@export var ground_speed : int = 2
# When ground moves past this point it will get reset back to (0, 0).
var x_threshold = -410

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass

func _physics_process(delta: float) -> void:
	move_ground()

func move_ground() -> void:
	position.x -= ground_speed
	if position.x <= x_threshold:
		position.x = 0
"

[sub_resource type="PackedScene" id="PackedScene_mu8o5"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("Ground", "script", "StaticBody2D", "Sprite2D", "texture_filter", "position", "texture", "CollisionShape2D"),
"node_count": 3,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 2, 0, -1, 1, 1, 0, 0, 0, 0, 3, 3, -1, 3, 4, 1, 5, 2, 6, 3, 0, 0, 0, 7, 7, -1, 0, 0),
"variants": [SubResource("GDScript_mc0ia"), 1, Vector2(231, 555), ExtResource("3_akm70")],
"version": 3
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mv0iq"]
size = Vector2(616, 112)

[node name="Level" type="Node2D"]
script = ExtResource("1_5ow2e")
pipe_scene = ExtResource("4_ettgd")
ground_scene = SubResource("PackedScene_mu8o5")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 360.0
offset_bottom = 640.0
texture = ExtResource("1_66n7g")

[node name="Player" parent="." instance=ExtResource("3_enfji")]
position = Vector2(64, 318)

[node name="TimerPipe" type="Timer" parent="."]
wait_time = 1.5

[node name="GroundMarker2" type="Marker2D" parent="."]
position = Vector2(365, 528)

[node name="Ground" type="StaticBody2D" parent="."]
z_index = 1
position = Vector2(0, 528)

[node name="Sprite2D" type="Sprite2D" parent="Ground"]
texture_filter = 1
position = Vector2(308, 56)
scale = Vector2(2, 2)
texture = ExtResource("3_akm70")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(308, 56)
shape = SubResource("RectangleShape2D_mv0iq")

[node name="GroundMarker1" type="Marker2D" parent="."]
position = Vector2(0, 528)

[node name="MovingGroundMarker" type="Marker2D" parent="."]
position = Vector2(616, 528)

[node name="GameOverHUD" parent="." instance=ExtResource("6_jl6tk")]

[node name="MainGameHUD" parent="." instance=ExtResource("7_sttb2")]

[node name="TitleScreenHUD" parent="." instance=ExtResource("9_c6wvd")]

[node name="StartGameHUD" parent="." instance=ExtResource("10_7fif3")]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 2.16
offset_bottom = 1.86

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_amvyr")

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_njxtp")

[node name="MenuSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_lfeax")

[connection signal="game_over" from="." to="GameOverHUD" method="_on_game_over"]
[connection signal="reset_game" from="." to="TitleScreenHUD" method="_on_game_reset"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="idle_state_broken" from="Player" to="." method="_on_idle_state_broken"]
[connection signal="timeout" from="TimerPipe" to="." method="_on_pipe_timer_timeout"]
[connection signal="ok_button_pressed" from="GameOverHUD" to="." method="_on_reset_game"]
[connection signal="paused" from="MainGameHUD" to="." method="pause_game"]
[connection signal="unpaused" from="MainGameHUD" to="." method="unpause_game"]
[connection signal="start_button_pressed" from="TitleScreenHUD" to="." method="_on_start_game"]
